<resources>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="app_name">华容道古典版</string>
    <string name="menu_gamestart">进入游戏</string>
    <string name="select_gamestart">游戏选关</string>
    <string name="menu_help">游戏说明</string>
    <string name="menu_introduce">人物介绍</string>
    <string name="menu_gamesetting">游戏设置</string>
    <string name="sound_setting">打开音效</string>
    <string name="music_setting">打开背景音乐</string>
    <string name="menu_refresh">重新开始</string>
    <!-- 以下为各个关卡名称 -->
    <string name="level_hdlm">横刀立马</string>
    <string name="level_blcy">兵临曹营</string>
    <string name="level_smcg">四面楚歌</string>
    <string name="level_wjbg">五将逼宫</string>
    <string name="level_bjlf">兵将联防</string>
    <string name="level_sjlf">三军联防</string>
    <string name="level_qtbq">齐头并前</string>
    <string name="level_bfsl">兵分三路</string>
    <string name="level_tbdl">屯兵东路</string>
    <string name="level_zybb">左右步兵</string>
    <string name="level_qdfz">前挡后阻</string>
    <string name="level_ccnf">插翅难飞</string>
    <string name="level_jzzc">近在咫尺</string>
    <string name="level_jycy">将拥曹营</string>
    <string name="level_ccsf">层层设防</string>
    <string name="level_sxbt">水泄不通</string>
    <string name="level_xycc">小燕出巢</string>
    <string name="level_bdjz">兵挡将阻</string>
    <string name="level_gwg">过五关</string>
    <string name="level_yfdg">一夫当关</string>
    <string name="level_yzcs">一字长蛇</string>
    <string name="level_tldw">天罗地网</string>
    <string name="level_tqtb">铜墙铁壁</string>
    <string name="level_tzyy">逃之夭夭</string>
    <string name="level_hmlm">横眉立目</string>
    <string name="level_wkym">网开一面</string>
    <string name="level_ycxd">羊肠小道</string>
    <string name="level_blsy">壁垒森严</string>
    <string name="level_hsjj">横竖皆将</string>
    <string name="level_hktk">海阔天空</string>
    <string name="level_kms">孔明扇</string>
    <string name="level_yljj">一路进军</string>
    <string name="level_jzzc2">近在咫尺2</string>
    <string name="level_sttg">殊途同归</string>
    <string name="level_pmsf">匹马嘶风</string>
    <string name="level_ybbn">欲罢不能</string>
    <string name="level_webj">围而不歼</string>
    <string name="level_whzj">无横之局</string>
    <string name="level_wszj">无竖之局</string>
    <string name="level_sljb">四路进兵</string>
    <string name="level_rdwm">入地无门</string>
    <string name="level_wwbg">文王八卦</string>
    <string name="level_yycs">鱼游春水</string>
    <string name="level_hxzj">横行之将</string>
    <string name="level_nqct">牛气冲天</string>
    <string name="level_bszl">背水阵列</string>
    <string name="level_lh">轮回</string>
    <string name="level_jdzw">井底之蛙</string>
    <string name="level_yqyz">寓巧于拙</string>
    <string name="level_dpxj">独辟蹊径</string>
    <string name="level_hlwd">换离为兑</string>
    <string name="level_sykt">三阳开泰</string>
    <string name="level_adcc">暗度陈仓</string>
    <string name="level_fjml">冯京马凉</string>
    <string name="level_xbtl">小兵探路</string>
    <string name="level_fm">砝码</string>
    <string name="level_smbf">四面八方</string>
    <string name="level_ybzy">一步之遥</string>
    <string name="level_test">测试</string>
    <!-- 以上为各个关卡名称 -->
    <string name="username_tip">请输入玩家</string>
    <string name="unlock_tip">请解锁本关游戏</string>
    <string name="player">玩家1</string>
    <string name="about">游戏介绍</string>
    <string name="double_click_exit">再按一次退出</string>
    <string name="win_title">恭喜</string>
    <string name="win_msg">曹操奋力拼杀%1$d回合，顺利通过华容道！</string>
    <string name="bt_ok">确定</string>
    <string name="bt_cancel">取消</string>
    <string name="bt_share">分享</string>
    <string name="bt_rank">排行榜</string>
    <string name="bt_yes">是</string>
    <string name="bt_no">否</string>
    <string name="exit">是否退出本关？</string>
    <string name="retry">是否重新开始？</string>
    <string name="warn">提醒</string>
    <string name="step">当前步数:</string>
    <string name="game_exit">出口</string>
    <string name="doc">\u0009\u0009  华容道介绍（中国民间智力游戏）: \n华容道是古老的汉族民间益智游戏，以其变化多端、百玩不厌的特点与魔方、独立钻石棋一起被国外智力专家并称为“智力游戏界的三个不可思议”。它与七巧板、九连环等汉族传统益智玩具还有个代名词叫作“中国的难题”。据《资治通鉴》注释中说“从此道可至华容也”。华容道原是中国古代的一个地名，相传当年曹操曾经败走此地。
	    \n\u0009\u0009  华容道游戏规则：\n通过移动各个棋子，帮助曹操从初始位置移到棋盘最下方中部，从出口逃走。不允许跨越棋子，还要设法用最少的步数把曹操移到出口。</string>
    <string name="caocao">曹操</string>
    <string name="guanyu">关羽（?－220）</string>
    <string name="zhangfei">张飞（?－221）</string>
    <string name="machao">马超（176－222）</string>
    <string name="huangzhong">黄忠（?－220）</string>
    <string name="zhaoyun">赵云（?－229）</string>
    <string name="caocaojs">曹操，字孟德，小字阿瞒，汉族，沛国谯县（今安徽亳州）人。中国东汉末年著名的军事家、政治家和诗人，三国时代魏国的奠基人和主要缔造者，后为魏王。其子曹丕称帝后，追尊他为魏武帝。曹操一生征战，为全国尽快统一，在北方广泛屯田，兴修水利，对当时的农业生产恢复有一定作用；其次，他用人唯才，打破世族门第观念，抑制豪强，所统治的地区社会经济得到恢复和发展。此外，他还精于兵法，著《孙子略解》、《兵书接要》《孟德新书》等书。作为一代枭雄，他精通音律，善作诗歌，抒发政治抱负，并反映汉末人民苦难生活，慷慨悲凉。</string>
    <string name="guanyujs">关羽（?－220）本字长生，后改字云长，河东解（今山西运城）人。东汉末年名将，刘备起兵时，关羽跟随刘备，忠心不二，深受刘备信任。刘备、诸葛亮等入蜀，关羽镇守荆州，刘备夺取汉中后，关羽乘势北伐曹魏，曾水淹七军、擒于禁、斩庞德、威震华夏，吓得曹操差点迁都躲避，但是东吴偷袭荆州，关羽兵败被害。关羽去世后，逐渐被神化，被民间尊为“关公”；历代朝廷多有褒封，清代奉为“忠义神武灵佑仁勇威显关圣大帝”，崇为“武圣”，与“文圣” 孔子齐名。《三国演义》尊其为“五虎上将”之首，毛宗岗称其为“《演义》三绝”之“义绝”。</string>
    <string name="zhangfeijs">张飞（?－221），字益德（《三国演义》、《华阳国志》中字翼德），汉族，涿郡（治今河北涿州）人，三国时期蜀汉重要将领。官至车骑将军，封西乡侯。在中国传统文化中，张飞以其勇猛、鲁莽、嫉恶如仇而著称，虽然此形象主要来源于小说和戏剧等民间艺术，但已深入人心。</string>
    <string name="machaojs">马超（176－222），字孟起，扶风茂陵（今陕西兴平）人。三国时期蜀汉名将。马超是东汉初年伏波将军马援的后人，起初随父亲马腾在西凉为一方军阀，后与韩遂一同进攻潼关，被曹操以离间计击败。此后马超又起兵攻杀凉州刺史韦康，不久被韦康故吏杨阜击败，投奔张鲁。刘备入蜀后马超投奔刘备，并为刘备作前驱，进入成都。刘备称汉中王后拜马超为左将军，假节；公元221年刘备称帝，又进马超为骠骑将军，领凉州牧，封斄乡侯。公元222年，马超病逝，终年47岁。</string>
    <string name="huangzhongjs">黄忠（?－220），字汉升（太平御览卷二百三十八引《蜀志》中作“汉叔”），南阳（治今河南南阳）人。东汉末年名将。本为刘表部下中郎将，后归刘备，并助刘备攻益州刘璋。公元219年，黄忠在定军山一战中阵斩曹操部下名将夏侯渊，升任征西将军，刘备称汉中王后改封后将军，赐关内侯。次年，黄忠病逝，谥曰刚侯。黄忠在后世多以勇猛的老将形象出现于各类文学艺术作品中，在小说《三国演义》中是蜀汉五虎大将之一，他的名字在中国也逐渐成为了老当益壮的代名词。</string>
    <string name="zhaoyunjs">赵云（?－229），三国常山真定（今河北正定南）人，字子龙。初从公孙瓒，后归刘备。曹操取荆州，刘备败于当阳长阪，他力战救护甘夫人和备子刘禅。刘备得益州，任为翊军将军，从攻汉中。建兴六年（公元228年），从诸葛亮攻关中，分兵拒曹真主力，以众寡不敌，退回汉中。次年卒。他曾以数十骑拒曹操大军，被刘备誉为“一身都是胆”。——《大辞海》中国古代史卷</string>
    <string name="title_activity_settings">Settings</string>

    <string name="level_lock">解锁</string>
    <string name="level_unlock_tip">解锁所有已锁定游戏</string>
    <string name="level_lock_tip">锁定所有已锁定游戏</string>
    <string name="sound_setting_on">音效已打开</string>
    <string name="music_setting_on">背景音乐已打开</string>
    <string name="sound_setting_off">音效已关闭</string>
    <string name="music_setting_off">背景音乐已关闭</string>
    <string name="night_mode">夜间模式</string>
    <string name="night_mode_on">夜间模式已打开</string>
    <string name="night_mode_off">夜间模式已关闭</string>
    <!-- Preference Titles -->
    <string name="mode_header">Mode</string>
    <string name="ctrl_header">Control</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync</string>
    <string name="sound_title">Sound</string>
    <string name="music_title">Music</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="tip_rank">当前最佳成绩：%d步完成本关。</string>
    <string name="runtime_excption">Use getInstance() method to get the single instance of this class.</string>
</resources>
