<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

<!--    <PreferenceCategory app:title="@string/mode_header">-->

<!--        <EditTextPreference-->
<!--            app:key="name"-->
<!--            app:title="@string/signature_title"-->
<!--            app:useSimpleSummaryProvider="true" />-->

<!--        <ListPreference-->
<!--            app:defaultValue="reply"-->
<!--            app:entries="@array/reply_entries"-->
<!--            app:entryValues="@array/reply_values"-->
<!--            app:key="reply"-->
<!--            app:title="@string/reply_title"-->
<!--            app:useSimpleSummaryProvider="true" />-->

<!--    </PreferenceCategory>-->

    <PreferenceCategory app:title="@string/ctrl_header">

        <SwitchPreferenceCompat
            app:key="Sound"
            app:summaryOff="@string/sound_setting_off"
            app:summaryOn="@string/sound_setting_on"
            app:title="@string/sound_title" />
        <SwitchPreferenceCompat
            app:key="Music"
            app:summaryOff="@string/music_setting_off"
            app:summaryOn="@string/music_setting_on"
            app:title="@string/music_title" />

        <SwitchPreferenceCompat

            app:key="level_unlock"
            app:summaryOff="@string/level_lock_tip"
            app:summaryOn="@string/level_lock_tip"
            app:title="@string/level_lock" />

    </PreferenceCategory>

</PreferenceScreen>
