<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.whywhom.soft.huarongdao.ui.home.HomeFragment"
        android:label="@string/select_gamestart"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_page_game"
            app:destination ="@id/nav_game" />
    </fragment>

    <fragment
        android:id="@+id/nav_help"
        android:name="com.whywhom.soft.huarongdao.ui.help.HelpFragment"
        android:label="@string/menu_help"
        tools:layout="@layout/fragment_help" />

    <fragment
        android:id="@+id/nav_introduce"
        android:name="com.whywhom.soft.huarongdao.ui.introduce.IntroduceFragment"
        android:label="@string/menu_introduce"
        tools:layout="@layout/fragment_introduce" />

    <fragment
        android:id="@+id/nav_setting"
        android:name="com.whywhom.soft.huarongdao.ui.setting.SettingFragment"
        android:label="@string/menu_gamesetting"
        tools:layout="@layout/fragment_setting" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.whywhom.soft.huarongdao.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.whywhom.soft.huarongdao.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />

    <fragment
        android:id="@+id/nav_game"
        android:name="com.whywhom.soft.huarongdao.ui.game.GameFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_game">
        <action
            android:id="@+id/action_page_home"
            app:popUpTo="@id/nav_home" />
    </fragment>
</navigation>