<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fragment_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/caocao"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:drawableLeft="@drawable/ccjs"
                android:drawablePadding="40dp"
                android:gravity="center_vertical"
                android:text="@string/caocao"
                android:textColor="@android:color/holo_blue_dark" />

            <TextView
                android:id="@+id/caocao_detail"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:gravity="left"
                android:text="@string/caocaojs"
                android:textColor="@android:color/holo_blue_light"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/guanyu"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:drawableLeft="@drawable/gyjs"
                android:drawablePadding="40dp"
                android:gravity="center_vertical"
                android:text="@string/guanyu"
                android:textColor="@android:color/holo_blue_dark" />

            <TextView
                android:id="@+id/guanyu_detail"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:gravity="left"
                android:text="@string/guanyujs"
                android:textColor="@android:color/holo_blue_light"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/zhangfei"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:drawableLeft="@drawable/zfjs"
                android:drawablePadding="40dp"
                android:gravity="center_vertical"
                android:text="@string/zhangfei"
                android:textColor="@android:color/holo_blue_dark" />

            <TextView
                android:id="@+id/zhangfei_detail"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:gravity="left"
                android:text="@string/zhangfeijs"
                android:textColor="@android:color/holo_blue_light"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/zhaoyun"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:drawableLeft="@drawable/zyjs"
                android:drawablePadding="40dp"
                android:gravity="center_vertical"
                android:text="@string/zhaoyun"
                android:textColor="@android:color/holo_blue_dark" />

            <TextView
                android:id="@+id/zhaoyun_detail"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:gravity="left"
                android:text="@string/zhaoyunjs"
                android:textColor="@android:color/holo_blue_light"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/machao"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:drawableLeft="@drawable/mcjs"
                android:drawablePadding="40dp"
                android:gravity="center_vertical"
                android:text="@string/machao"
                android:textColor="@android:color/holo_blue_dark" />

            <TextView
                android:id="@+id/machao_detail"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:gravity="left"
                android:text="@string/machaojs"
                android:textColor="@android:color/holo_blue_light"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/huangzhong"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:drawableLeft="@drawable/hzjs"
                android:drawablePadding="40dp"
                android:gravity="center_vertical"
                android:text="@string/huangzhong"
                android:textColor="@android:color/holo_blue_dark" />

            <TextView
                android:id="@+id/huangzhong_detail"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:gravity="left"
                android:text="@string/huangzhongjs"
                android:textColor="@android:color/holo_blue_light"
                android:visibility="gone"/>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>