<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    tools:context="${relativePackage}.${activityClass}" >
    <!-- xmlns:baiduadsdk="http://schemas.android.com/apk/res/com.android.why.huarongdao" -->

	<RelativeLayout
	    android:id="@+id/ll_step"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginLeft="10dp"
	    android:layout_marginRight="10dp"
	    android:layout_alignParentTop="true"
	    android:orientation="horizontal" >
		<TextView
	        android:id="@+id/tv_step"
	        android:padding="5dp"
	        android:layout_alignParentLeft="true"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_centerVertical="true"
	        android:textColor="@android:color/white"
	        android:text="@string/step" />

		<ImageView
		    android:id="@+id/iv_rank"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_centerVertical="true"
		    android:layout_alignParentRight="true"
		    android:contentDescription="@string/bt_rank"
		    android:background="@drawable/rank" />

    </RelativeLayout>
	

	  	
	<TextView
        android:id="@+id/tv_exit"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:padding="5dp"
        
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:text="@string/game_exit" />
	<!-- android:layout_above="@id/adView" -->
    <RelativeLayout
        android:id="@+id/view1"
        android:layout_below="@id/ll_step"
        android:layout_above="@id/tv_exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    

</RelativeLayout>
